<resources>
    <string name="app_name">GPA_Tejadaa4_Calculator</string>
    <string name="course_1">Course #1</string>
    <string name="course_2">Course #2</string>
    <string name="course_3">Course #3</string>
    <string name="course_4">Course #4</string>
    <string name="course_5">Course #5</string>
    <string name="compute_gpa">Compute GPA</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="Grade">A, B, C, D, F</string>
</resources>
